--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,47 +1,291 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewreport" content="width=device-width, initial-scale=1.0" />
-        <title>Sport Center index</title>
-        <link rel="stylesheet" href="/css/style1.css"/>
-        <link rel="stylesheet" href="/css/all.min.css" />
-        <link rel="stylesheet" href="/css/css2.css" />
+<head>
+    <meta charset="utf-8">
+    <title> Magestic Hotel</title>
+     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     <script type="text/javascript" src="/js/slick.js"></script>
+     <script type="text/javascript" src="/js/jquery.scrollUp.js"></script>
+  
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/slick.css">
+
+
+
+  
+         <script type="text/javascript" src="/js/demo.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    
+    
+
+
+    
     </head>
-    <body>
-           <!-----bg animantion starts here----->
-           <div class="bg"></div>
-           <div class="bg bg2"></div>
-           <div class="bg bg3"></div>
-           <!-----bg animantion ends here----->
+    
+<body >  
+    <header class="tm-header">
+        <img class="tm-logo" src="/images/Majestic_Hotel_hd.png" alt="Majestic Hotel">
+        <nav class="tm-nav" >
+       <div>
+            <ul>
+                <li class="tm-list"><a href="index.html">Home</a></li>
+                <li class="tm-list"><a href="explore.html">Explore </a></li>
+                <li class="tm-list"><a href="rooms.html">Activities</a></li>
+                <li class="tm-list"><a href="bb.html">Booking</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>    
+            </div>
+        </nav>
+    </header>
+    
+    <section class="tm-imgslider">
+ 
+    
+    <div class="slider single">
+					<div><div class="tm-slider"><img class="tm-sliderimage" src="/images/index_slider1.jpg" alt="Majestic Hotel">
+                        <div class="tm-slidertext">
+                        <p class="bold"> Expierence</p>
+                        <p class="simple">The Beauty and ambience </p>
+                            <p class="simple">All in one place </p></div>
+                </div></div>
+					<div><div class="tm-slider"><img class="tm-sliderimage" src="/images/index_slider2.jpg" alt="Majestic Hotel">
+                        <div class="tm-slidertext">
+                        <p class="bold"> Expierence</p>
+                        <p class="simple">Excellent quality facilities </p>
+                            <p class="simple">Experience to the fullest </p></div>
+                </div></div>
+					<div><div class="tm-slider"><img class="tm-sliderimage" src="/images/index_slider3.jpg" alt="Majestic Hotel">
+                        <div class="tm-slidertext">
+                        <p class="bold"> Expierence</p>
+                        <p class="simple">Multiple activities </p>
+                            <p class="simple">There's always something for you </p></div>
+                </div></div>
+					<div><div class="tm-slider"><img class="tm-sliderimage" src="/images/index_slider4.jpg" alt="Majestic Hotel">
+                        <div class="tm-slidertext">
+                        <p class="bold"> Expirence</p>
+                        <p class="simple">Good life</p>
+                            <p class="simple">Make your life active</p></div>
+                </div></div>
+				
+				</div>
+        <img src="/images/back.png" class="left" alt="">
+          <img src="/images/next.png" class="right" alt="">
+   </section>
+    
 
-        <div class="inFormBackground">
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="inLoginForm">
-                <form action="/stulogin" method="post">
-                    <p>Welcome to XJTLU Sport Center</p>
-                    <div class="title"><h3>Stu Login Here</h3></div>
-                    <div class="inputGroup">
-                        <label for="email">Email</label>
-                        <input type="email" placeholder="Enter Email" id="email" name="email" required/>
+    
+
+
+    
+     <section class="slider room flex">
+      
+                    <div class="tm-rooms">
+                        <img src="/images/Basketball.jpg" alt="">
+                       <a href="rooms.html"> <p>Basketball</p> </a>
+
                     </div>
-
-                    <div class="inputGroup">
-                        <label for="password">Password:</label>
-                        <input type="password" id="password" name="password" placeholder="Enter Password" required>
-                        <button class="submitForm" type="submit">Log In</button>
-                        <div class="buttom">
-                            <a href="/adminlogin">I'm an admin</a>>
-                            <input type="checkbox" id="myCheckbox">
-                            <label for="myCheckbox" ><a href="https://guide.xjtlu.edu.cn">UserAgreement</a>></label>
-                        </div>
-
+                        <div class="tm-rooms">
+                        <img src="/images/Badminton.jpg" alt="">
+                            <a href="rooms.html"> <p>Badminton</p></a>
 
                     </div>
-                </form>
+                        <div class="tm-rooms">
+                        <img src="/images/FitnessCenter.jpg" alt="">
+                            <a href="rooms.html">  <p>Fitness Center</p></a>
+
+                    </div>
+                    <div class="tm-rooms">
+                        <img src="/images/TableTennis.jpg" alt="">
+                       <a href="rooms.html"> <p>Table Tennis</p> </a>
+
+                    </div>
+                        <div class="tm-rooms">
+                        <img src="/images/Golf.jpg" alt="">
+                            <a href="rooms.html"> <p>Golf</p></a>
+
+                    </div>
+                        <div class="tm-rooms">
+                        <img src="/images/Billiards.jpg" alt="">
+                            <a href="rooms.html">  <p>Billiards</p></a>
+
+                    </div>
+            
+                  
+    </section>
+
+    
+    
+    
+    
+    <section class="tm-servicesection">
+         <div class="tm-service">
+              <img class="tm-serimage" src="/images/bell.png" alt="">
+             <div>
+                        <p class="b">Timing Service</p>
+                        <p> Enjoy your activities during the designated time. </p> </div>
+        </div>
+        <div class="tm-service">
+              <img class="tm-serimage" src="/images/coffee.png" alt="">
+             <div>
+                        <p class="b">Free Water</p>
+                        <p> We use filtered water dispensers to provide
+                            free boiled and room temperature water</p> </div>
+        </div>
+    </section>
+    <section class="tm-servicesection">
+
+        <div class="tm-service">
+              <img class="tm-serimage" src="/images/car-front.png" alt="">
+             <div>
+                        <p class="b">Free Parking</p>
+                        <p> No need to pay any extra charges to park your vehicle </p> </div>
+        </div>
+        <div class="tm-service">
+              <img class="tm-serimage" src="/images/spa.png" alt="">
+             <div>
+                        <p class="b">Free Shower</p>
+                        <p> Free shower service is available</p> </div>
+        </div>
+
+    </section>
+
+
+
+
+
+    <section class="tm-reviewsection">
+        <div class="tm-review">
+            <div class="slider review">
+                <div class="tm-revcon">
+                    <p class="b">Reviews</p>
+                    <div class="tm-stars">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                    </div>
+                    <div class="tm-rev">
+                        <p>Great basketball court, I am recommending it to everyone. Wished I had stayed few more hours there.</p>
+                        <br/>
+                        <p>Rachel Green &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Basketball Enthusiast</p>
+                    </div>
+                </div>
+                <div class="tm-revcon">
+                    <p class="b">Reviews</p>
+                    <div class="tm-stars">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                    </div>
+                    <div class="tm-rev">
+                        <p>Nice badminton court, I had a wonderful experience and there are plenty of amenities.</p>
+                        <br/>
+                        <p>Ross Geller &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Visitor</p>
+                    </div>
+                </div>
+                <div class="tm-revcon">
+                    <p class="b">Reviews</p>
+                    <div class="tm-stars">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                    </div>
+                    <div class="tm-rev">
+                        <p>Great fitness center, great equipment enough said.</p>
+                        <br/>
+                        <p>Joey Tribiani &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Fitness Enthusiast</p>
+                    </div>
+                </div>
+                <div class="tm-revcon">
+                    <p class="b">Reviews</p>
+                    <div class="tm-stars">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                    </div>
+                    <div class="tm-rev">
+                        <p>Very nice table tennis facility, enjoyed the game and as a coach I recommend it.</p>
+                        <br/>
+                        <p>Pheobe Buffay &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Table Tennis Coach</p>
+                    </div>
+                </div>
+                <div class="tm-revcon">
+                    <p class="b">Reviews</p>
+                    <div class="tm-stars">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                    </div>
+                    <div class="tm-rev">
+                        <p>Nice golf course, calm and clean just the way I like it.</p>
+                        <br/>
+                        <p>Monica Geller &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Golfer</p>
+                    </div>
+                </div>
+                <div class="tm-revcon">
+                    <p class="b">Reviews</p>
+                    <div class="tm-stars">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                        <img src="/images/star.png">
+                    </div>
+                    <div class="tm-rev">
+                        <p>Knock knock, who's there? ... a satisfied visitor.</p>
+                        <br/>
+                        <p>Chandler Bing &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Visitor</p>
+                    </div>
+                </div>
             </div>
         </div>
-    </body>
+    </section>
+
+
+
+    <section class="tm-makeres">
+    <div class="tm-res">
+       <div class="tm-resbutton">
+           <a href="bb.html"> <p>Make Reservation</p></a>
+        </div>
+        </div>
+    </section>
+    
+    <footer class="tm-footer">
+        <div class="tm-us">
+        <p class="bold">About Us</p>
+            <p>Welcome to XJTLU Sports Center, <br>
+                where you will harvest a <br>
+                different journey.</p>
+        </div>
+       
+        <div class="tm-address">
+        <p class="bold">Address</p>
+            <p>Suzhou,<br>
+                XJTLU-SIP,<br>
+                phone : (0512）8888888</p>
+        </div>
+        <br/>
+    <div class="tm-media">
+        <a href="#"> <img src="/images/fb.png"></a>
+        <a href="#"> <img src="/images/G.png"> </a>
+        <a href="#"> <img src="/images/twittr.png"> </a>
+        <a href="#">  <img src="/images/insta.png"> </a>
+        
+        </div>
+       
+<!--    <a  href="#top">  <img class="tm-up" src="images/up.png"> </a>-->
+        
+      
+    </footer>
+</body>
 </html>
