--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -20,19 +20,17 @@
     <div class="circle"></div>
     <div class="circle"></div>
     <div class="inLoginForm">
-        <form onsubmit="return false">
+        <form action="/admlogin" method="post">
             <p>Welcome to XJTLU Sport Center</p>
             <div class="title"><h3>Adm Login Here</h3></div>
             <div class="inputGroup">
                 <label for="email">Email</label>
-                <input
-                        id="email"
-                        placeholder="Enter Email"
-                        type="email"/>
+                <input type="email" placeholder="Enter Email" id="email" name="email" required/>
             </div>
             <div class="inputGroup">
-                <label for="myInput">Password:</label>
-                <input id="myInput" placeholder="Enter Password" type="password" value="">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" placeholder="Enter Password" required>
+
                 <button class="submitForm">Log In</button>
                 <a href="/stulogin">I'm a student</a>>
             </div>
